Added Student Profile with changes to fit the local variables.

--- a/web/src/main/resources/templates/student/studentProfile.html
+++ b/web/src/main/resources/templates/student/studentProfile.html
@@ -20,17 +20,17 @@
         </ol>
       </nav>
     </div>
-
+    <!-- container for profile -->
     <div class="container ">
       <div class="row no-gutters d-flex justify-content-center ">
         <div class="card text-center  "  style="width: 88rem;">
           <div class="card-body">
             <div class="container ">
               <div class="row no-gutters d-flex justify-content-center ">
-
+             <!-- profile picture-->
                 <div class="col-md-auto ">
                   <img th:src="@{~/assets/marketplace.jpg}" alt="Card image cap" class="rounded">
-                </div>
+                </div> <!-- profile information-->
                 <div class="col-sm-6">
                   <div class="container ">
                     <div class="row border-bottom">
@@ -80,6 +80,8 @@
                 </div>
 
               </div>
+
+              <!-- bio edit button-->
               <div class="col-sm-6">
                 <button type="button" class="btn btn-primary">Edit Bio</button>
               </div>
@@ -87,7 +89,7 @@
                 <div class="col-sm-9 ">
                   <div class="card" style="width: 58rem;">
                     <div class="card-body">
-                      <h5 class="card-title">Bio</h5>
+                      <h5 class="card-title">Bio</h5> <!--User Bio-->
                       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla bibendum justo ut imperdiet lacinia.
                         Vestibulum dictum pretium dui nec auctor. Duis scelerisque, erat vitae luctus aliquam, dolor enim
                         placerat purus, eget commodo metus tellus posuere magna. Nulla vehicula, elit id dapibus gravida,
