Added comments and fixed some spacing

--- a/web/src/main/resources/templates/partner/partnerProfile.html
+++ b/web/src/main/resources/templates/partner/partnerProfile.html
@@ -20,24 +20,23 @@
         </ol>
       </nav>
     </div>
-
+    <!-- <div class="container "> -->
     <div class="container ">
       <div class="row no-gutters d-flex justify-content-center ">
         <div class="card text-center  "  style="width: 88rem;">
           <div class="card-body">
             <div class="container ">
               <div class="row no-gutters d-flex justify-content-center ">
-
+                <!-- profile picture -->
                 <div class="col-md-auto ">
                   <img th:src="@{~/assets/marketplace.jpg}" alt="Card image cap" class="rounded">
-                </div>
+                </div> <!-- profile information-->
                 <div class="col-sm-6">
                   <div class="container ">
                     <div class="row border-bottom">
                       <div class="col-4">
                         <p>Name: </p>
                       </div>
-
                       <div class="col-5">
                         <p >Tony The Immortal</p>
                       </div>
@@ -83,10 +82,9 @@
                       </div>
                     </div>
                   </div>
-
                 </div>
-
               </div>
+              <!-- profile bio-->
               <div class="col-sm-6">
                 <button type="button" class="btn btn-primary">Edit Bio</button>
               </div>
