--- a/web/src/main/resources/templates/partner/marketplace.html
+++ b/web/src/main/resources/templates/partner/marketplace.html
@@ -27,8 +27,8 @@
       <div th:replace="fragments/marketplace-tables :: partner"></div>
 
       <div class="d-grid col-md-3 gap-2 mx-auto">
-        <button type="button" class="btn btn-primary">Create New Placement</button>
-        <button type="button" class="btn btn-primary">View Expressions Of Interest</button>
+        <a class="btn btn-primary" th:href="@{~/partner/placement}">Create New Placement</a>
+        <a class="btn btn-primary" th:href="@{~/partner/expressions_of_interest}">View Expressions Of Interest</a>
       </div>
 
     </div>
