--- a/web/src/main/resources/templates/fragments/forum.html
+++ b/web/src/main/resources/templates/fragments/forum.html
@@ -2,6 +2,7 @@
 
 <!-- Create a new post button -->
 <div th:fragment="create-post-button" xmlns:th="http://www.thymeleaf.org">
+    <!-- Todo: Wire up new post button -->
     <a th:href="@{forum-content?type=post}" class="btn new-post-button">
         <span class="material-symbols-outlined">chat</span>
         <span>Post a New Question</span>
@@ -26,10 +27,12 @@
 
                     <!-- Iterate recent posts for the current category -->
                     <div class="recent-posts">
+                        <!-- Todo: Display message if no recent posts -->
+                        <!-- Todo: Limit the number of recent posts shown here -->
                         <h2>Recent Posts:</h2>
                         <ul class="preview-list" th:if="${post.category == category}" th:each=" post : ${recentPosts} ">
                             <li class="post-preview">
-                                <a th:href="@{forum-thread?category={cat}(cat=${category.name})}" th:text="${post.title}">Post Title</a>
+                                <a th:href="|@{forum-thread?category={cat}(cat=${category.name})}#post${post.id}|" th:text="${post.title}">Post Title</a>
                             </li>
                         </ul>
                     </div>
@@ -37,6 +40,54 @@
                 </div>
             </div>
         </div>
+
+    </div>
+</div>
+
+<!-- Category thread is shown when a user explores a forum category, it shows all the posts (and their replies) that have the chosen category -->
+<div th:fragment="category-thread" xmlns:th="http://www.thymeleaf.org">
+
+    <h1 class="text-center" th:text="${category}">Category Title</h1>
+    <!-- Todo: Display message if no pasts in category -->
+    <div class="accordion" id="categoryThread" th:each=" post : ${postsByCategory}">
+        <!-- Category Thread -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" th:id="|post${post.id}|">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" th:data-bs-target="|#post${post.id}Comments|" aria-expanded="true" th:aria-controls="|post${post.id}Comments|" th:text="${post.title}">
+                    Post Title
+                </button>
+            </h2>
+            <div th:id="|post${post.id}Comments|" class="accordion-collapse collapse show" th:aria-labelledby="|post${post.id}|"
+                 data-bs-parent="#categoryThread">
+                <div class="accordion-body">
+                    <div class="subtitle">
+                    <p th:text="${post.body}"></p>
+                        <div class="row">
+                            <!-- Todo: Implement post replies -->
+                            <a class="reply-link w-auto" th:href="@{forum-content?type=reply}" title="Reply"><span class="material-symbols-outlined">reply</span>Reply</a>
+                            <div class="ml-3 w-auto">
+                                <b th:text="${post.author.username}"></b>
+                                <small th:text="| - ${#dates.format(post.timestamp, 'dd/MM/yyyy h:mm a')}|"></small>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- Replies -->
+                    <div  th:each="reply : ${repliesForPosts}">
+                        <div class="reply">
+                            <p th:text="${reply.body}">Reply Body</p>
+                            <div class="ml-3 w-auto">
+                                <b th:text="${reply.author.username}"></b>
+                                <small th:text="| - ${#dates.format(reply.timestamp, 'dd/MM/yyyy h:mm a')}|"></small>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
 
     </div>
 </div>
@@ -98,67 +149,3 @@
         </div>
     </form>
 </div>
-
-<!-- Category thread is shown when a user explores a forum category, it shows all the posts (and their replies) that have the chosen category -->
-<div th:fragment="category-thread" xmlns:th="http://www.thymeleaf.org">
-
-    <h1 class="text-center" th:text="${category}">Category Title</h1>
-    <div class="accordion" id="categoryThread" >
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="categoryOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordionComments" aria-expanded="true" aria-controls="accordionComments">
-                    Post Title
-                </button>
-            </h2>
-            <div id="accordionComments" class="accordion-collapse collapse show" aria-labelledby="categoryOne"
-                 data-bs-parent="#categoryThread">
-                <div class="accordion-body">
-                    <div class="subtitle">
-                        The post body information<br/>
-                        <small>Date & time - <b>Tommy</b></small><br/>
-                        <a class="reply-link" th:href="@{forum-content?type=reply}" title="Reply"><span class="material-symbols-outlined">reply</span>Reply</a>
-                    </div>
-                    <!-- Comments -->
-                    <div class="reply">
-                        Reply 1
-                        <br/><small>Date & time - <b>Chad</b></small>
-                    </div>
-                    <div class="reply">
-                        Reply 2
-                        <br/><small>Date & time - <b>Dave</b></small>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="categoryTwo">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordionComments2" aria-expanded="true" aria-controls="accordionComments2">
-                    Post Title
-                </button>
-            </h2>
-            <div id="accordionComments2" class="accordion-collapse collapse show" aria-labelledby="categoryTwo"
-                 data-bs-parent="#categoryThread">
-                <div class="accordion-body">
-                    <div class="subtitle">
-                        The post body information<br/>
-                        <small>Date & time - <b>Tommy</b></small><br/>
-                        <a class="reply-link" th:href="@{forum-content?type=reply}" title="Reply"><span class="material-symbols-outlined">reply</span>Reply</a>
-                    </div>
-                    <!-- Comments -->
-                    <div class="reply">
-                        Reply 1
-                        <br/><small>Date & time - <b>Chad</b></small>
-                    </div>
-                    <div class="reply">
-                        Reply 2
-                        <br/><small>Date & time - <b>Dave</b></small>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-
