--- a/web/src/main/resources/templates/educator/forum/forum-content.html
+++ b/web/src/main/resources/templates/educator/forum/forum-content.html
@@ -21,7 +21,8 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
+          <li class="breadcrumb-item"><a th:href="@{forum}">Forum</a></li>
+          <li class="breadcrumb-item active" aria-current="page" th:text="${contentType}"></li>
         </ol>
       </nav>
 
