--- a/web/src/main/resources/templates/educator/forum/overview.html
+++ b/web/src/main/resources/templates/educator/forum/overview.html
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
+          <li class="breadcrumb-item active" aria-current="page">Forum</li>
         </ol>
       </nav>
 
