Added Fragment for shared profile information

--- a/web/src/main/resources/templates/partner/partnerProfile.html
+++ b/web/src/main/resources/templates/partner/partnerProfile.html
@@ -33,14 +33,7 @@
                 </div> <!-- profile information-->
                 <div class="col-sm-6">
                   <div class="container ">
-                    <div class="row border-bottom">
-                      <div class="col-4">
-                        <p>Name: </p>
-                      </div>
-                      <div class="col-5">
-                        <p >Tony The Immortal</p>
-                      </div>
-                    </div>
+                    <div th:replace="fragments/profileFragment"></div>
                     <div class="row border-bottom">
                       <div class="col-4">
                         <p>Placement Position Discipline: </p>
@@ -51,27 +44,12 @@
                     </div>
                     <div class="row border-bottom">
                       <div class="col-4">
-                        <p>Contact Number: </p>
-                      </div>
-                      <div class="col-5">
-                        <p>12311412421</p>
-                      </div>
-                    </div>
-                    <div class="row border-bottom">
-                      <div class="col-4">
                         <p>Business Name: </p>
                       </div>
                       <div class="col-5">
                         <p>Business inc</p>
                       </div>
                     </div>
-                    <div class="row border-bottom">
-                      <div class="col-4">
-                        <p>Email Address: </p>
-                      </div>
-                      <div class="col-5">
-                        <p >Tony@hotmail.com</p>
-                      </div>
                     </div>
                     <div class="row border-bottom">
                       <div class="col-4">
