Show replies just for that post

--- a/web/src/main/resources/templates/fragments/forum.html
+++ b/web/src/main/resources/templates/fragments/forum.html
@@ -77,7 +77,7 @@
 
                     </div>
                     <!-- Replies -->
-                    <div  th:each="reply : ${repliesForPosts}">
+                    <div  th:each="reply : ${repliesForPosts}" th:if="${reply.post.id == post.id}">
                         <div class="reply">
                             <p th:text="${reply.body}">Reply Body</p>
                             <div class="ml-3 w-auto">
