--- a/web/src/main/resources/templates/fragments/forum.html
+++ b/web/src/main/resources/templates/fragments/forum.html
@@ -138,7 +138,7 @@
 
         <div class="form-group mb-3 text-center">
             <button type="submit" class="btn form-button btn-success">Post</button>
-            <button type="reset" class="btn form-button btn-danger">Cancel</button>
+            <input  class="btn form-button btn-danger" type="button" value="Cancel" onclick="window.history.go(-1); return false;" />
         </div>
     </form>
 </div>
@@ -149,13 +149,13 @@
     <h1 class="text-center">Reply</h1>
     <form th:action="@{/educator/reply-to-post?type=reply&postId={pid}( pid=${postId} )}" th:object="${reply}" method="post">
         <div class="row p-3 pt-0">
-            <label for="reply-content" class="form-label"><b>Replying to ?:</b> <i>[Post Title]</i></label>
+            <label for="reply-content" class="form-label"><b>Reply</b></label>
             <textarea class="post-content form-floating" id="reply-content" rows="5" th:field="*{body}"></textarea>
         </div>
 
         <div class="form-group mb-3 text-center">
             <button type="submit" class="btn form-button btn-success">Reply</button>
-            <button type="reset" class="btn form-button btn-danger">Cancel</button>
+            <input  class="btn form-button btn-danger" type="button" value="Cancel" onclick="window.history.go(-1); return false;" />
         </div>
     </form>
 </div>
