--- a/web/src/main/resources/templates/educator/profile.html
+++ b/web/src/main/resources/templates/educator/profile.html
@@ -33,14 +33,7 @@
                                 </div> <!-- Profile information -->
                                 <div class="col-sm-6">
                                     <div class="container ">
-                                        <div class="row border-bottom">
-                                            <div class="col-4">
-                                                <p>Name: </p>
-                                            </div>
-                                            <div class="col-5">
-                                                <p >Tony The Immortal</p>
-                                            </div>
-                                        </div>
+                                        <div th:replace="fragments/profileFragment"></div>
                                         <div class="row border-bottom">
                                             <div class="col-4">
                                                 <p>Discipline: </p>
@@ -49,22 +42,8 @@
                                                 <p>Networking</p>
                                             </div>
                                         </div>
-                                        <div class="row border-bottom">
-                                            <div class="col-4">
-                                                <p>Phone Number: </p>
-                                            </div>
-                                            <div class="col-5">
-                                                <p>12311412421</p>
-                                            </div>
-                                        </div>
-                                        <div class="row border-bottom">
-                                            <div class="col-4">
-                                                <p>Email Address: </p>
-                                            </div>
-                                            <div class="col-5">
-                                                <p >Tony@hotmail.com</p>
-                                            </div>
-                                        </div>
+
+
                                         <div class="row border-bottom">
                                             <div class="col-4">
                                                 <p>CQU Educator ID: </p>
