--- a/web/src/main/resources/templates/contact.html
+++ b/web/src/main/resources/templates/contact.html
@@ -8,7 +8,7 @@
             <div class="row h-100 align-items-center py-5 form container">
                 <div class="col-lg-6">
                     <h1 class="display-4 header-style center">Contact Us</h1>
-                    <p class="center"><br>Contact the team for help with any enquiries. Fill in the enquiry form or use our details below to get in touch.</p>
+                    <p class="center"><br>Contact the team for help with any enquiries. </p>
                     <hr>
                     <span class="center"><img src="assets/icons/telephone.svg" class="icon-size"/></span>
                     <p class="center">0494 644 648</p>
