--- a/web/src/main/resources/templates/fragments/marketplace-tables.html
+++ b/web/src/main/resources/templates/fragments/marketplace-tables.html
@@ -31,9 +31,9 @@
                     <td th:text="${pos.description}">Just a one month job</td>
                     <td style="display: flex;">
                         <div class="mx-auto">
-                            <span class="material-symbols-rounded btn-approve">done</span>
-                            <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
-                            <span class="material-symbols-rounded btn-delete">delete</span>
+                            <span class="material-symbols-rounded btn-approve">Done</span>
+                            <span class="material-symbols-rounded btn-edit" title="Edit">Edit</span>
+                            <span class="material-symbols-rounded btn-delete">Delete</span>
                         </div>
                     </td>
                 </tr>
