--- a/web/src/main/resources/static/css/common.css
+++ b/web/src/main/resources/static/css/common.css
@@ -6,9 +6,9 @@
 .form-button {
     background-color: #003057 !important;
     border-radius: 10px;
-    color: #FFFFFF;
+    color: #FFFFFF !important;
 }
-.form-style:focus {
+.form-style {
     border-color: #003057 !important;
     color: #003057 !important;
 }
@@ -40,8 +40,8 @@
     background-color: #003057;
     border-radius: 50%;
     color: white;
-    width: 100px;
-    height: 100px;
+    width: 100px !important;
+    height: 100px !important;
     margin: auto;
     line-height: 100px;
 }
