Create a dummy Educator EOI page.

--- a/web/src/main/resources/templates/educator/dashboard.html
+++ b/web/src/main/resources/templates/educator/dashboard.html
@@ -49,7 +49,7 @@
                         <h5 class="card-title">Expressions of Interest</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Manage</h6>
                         <p class="card-text">Receive and release placement expressions of interest</p>
-                        <a th:href="@{expressions_of_interest}" class="btn btn-primary">Browse</a>
+                        <a th:href="@{expressions-of-interest}" class="btn btn-primary">Browse</a>
                     </div>
                 </div>
                 <div class="card col-sm-12 col-md-4" style="width: 18rem;">
