Fix registration bg color and form border

--- a/web/src/main/resources/static/css/common.css
+++ b/web/src/main/resources/static/css/common.css
@@ -1,6 +1,8 @@
 .form-border {
     border-color: #003057 !important;
+    border-style: solid;
     border-radius: 10px;
+    border-width: 1px;
 }
 
 .form-button {
