--- a/web/src/main/resources/templates/fragments/studentForm.html
+++ b/web/src/main/resources/templates/fragments/studentForm.html
@@ -4,7 +4,7 @@
     <div class="w-50 mx-auto">
         <form
                 id="student-form"
-                class="row g-3 border form-border mt-3"
+                class="row g-3 form-border mt-3"
                 th:action="@{/register}"
                 method="post">
             <div class="form-icon center mt-3">
