modified the destination of 'create new position' button

--- a/web/src/main/resources/templates/partner/marketplace.html
+++ b/web/src/main/resources/templates/partner/marketplace.html
@@ -27,7 +27,7 @@
       <div th:replace="fragments/marketplace-tables :: partner"></div>
 
       <div class="d-grid col-md-3 gap-2 mx-auto">
-        <a class="btn btn-primary" th:href="@{~/partner/placement}">Create New Placement</a>
+        <a class="btn btn-primary" th:href="@{~/partner/new-position}">Create New Placement</a>
         <a class="btn btn-primary" th:href="@{~/partner/expressions_of_interest}">View Expressions Of Interest</a>
       </div>
 
