--- a/web/src/main/resources/templates/partner/new-position.html
+++ b/web/src/main/resources/templates/partner/new-position.html
@@ -5,22 +5,36 @@
 <body onload="showFragment(null)">
 
 <div th:replace="fragments/navigation :: top-navigation"></div>
-<div>
-    <div class="w-25 mx-auto mt-3" style="position:relative">
-        <!-- Select the user type -->
-        <label for="positionTypes" class="form-label mb-3 center">Select the position type:</label>
-        <select class="form-select" id="positionTypes" onchange="showFragment(this.value)">
-            <option th:each="opt : ${positionOptions}"
-                    th:text="${opt}"
-                    th:value="${opt}">
-            </option>
-        </select>
-        <hr>
+
+<div class="d-flex" id="wrapper">
+    <!-- Sidebar Menu -->
+    <div th:replace="fragments/navigation :: sidebar"></div>
+    <div id="page-content-wrapper">
+        <div class="container-fluid">
+
+            <!-- breadcrumb -->
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Marketplace</li>
+                </ol>
+            </nav>
+
+            <h1 class="text-center m-3">New Position</h1>
+            <label for="positionTypes" class="form-label mb-3 center">Select the position type:</label>
+            <select class="form-select" id="positionTypes" onchange="showFragment(this.value)">
+                <option th:each="opt : ${positionOptions}"
+                        th:text="${opt}"
+                        th:value="${opt}">
+                </option>
+            </select>
+
+            <!-- New position forms -->
+            <div th:replace="fragments/position-forms  :: job-form"></div>
+            <div th:replace="fragments/position-forms  :: placement-form"></div>
+        </div>
     </div>
 </div>
-<!-- Each of the 3 registration forms -->
-<div th:replace="fragments/position-forms  :: job-form"></div>
-<div th:replace="fragments/position-forms  :: placement-form"></div>
 </body>
 <script>
 
@@ -28,7 +42,6 @@
     function showFragment(positionType) {
         document.getElementById("job-form").hidden = (positionType != "Job")
         document.getElementById("placement-form").hidden = (positionType != "Placement")
-        document.getElementById("position-form").hidden = (positionType != "Select...")
     }
 
 </script>
