--- a/web/src/main/resources/templates/fragments/marketplace-tables.html
+++ b/web/src/main/resources/templates/fragments/marketplace-tables.html
@@ -152,7 +152,7 @@
                 <td th:text="${pos.approved ? 'Approved' : 'Pending'}">Approved</td>
                 <td style="display: flex;">
                     <div class="mx-auto">
-                        <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
+                        <a th:href="@{'/partner/edit-position?positionType='+${pos.type}}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
                         <span class="material-symbols-rounded btn-delete">delete</span>
                     </div>
                 </td>
