--- a/web/src/main/resources/templates/fragments/marketplace-tables.html
+++ b/web/src/main/resources/templates/fragments/marketplace-tables.html
@@ -31,9 +31,9 @@
                     <td th:text="${pos.description}">Just a one month job</td>
                     <td style="display: flex;">
                         <div class="mx-auto">
-                            <span class="material-symbols-rounded btn-approve">done</span>
-                            <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
-                            <span class="material-symbols-rounded btn-delete">delete</span>
+                            <span class="material-symbols-rounded btn-approve">Done</span>
+                            <span class="material-symbols-rounded btn-edit" title="Edit">Edit</span>
+                            <span class="material-symbols-rounded btn-delete">Delete</span>
                         </div>
                     </td>
                 </tr>
@@ -98,6 +98,65 @@
                         </div>
                     </td>
                 </tr>
+            </tbody>
+        </table>
+
+        <script th:inline="javascript">
+            /*<![CDATA[*/
+            var positions =
+                /*[[${approvedPositions}]]*/
+                /*]]>*/
+                $("#approvedFilter").on("keyup", function () {
+                    var value = $(this).val();
+                    var table = document.getElementById("approvedPositionsData");
+                    var filteredData = educatorFilterPositions(value, positions);
+                    rebuildEducatorPositionsTable(filteredData, table);
+                });
+        </script>
+    </div>
+
+</div>
+<!-- current (approved) jobs & placements for students-->
+<div th:fragment="approvedStudent" id="approvedStudent" xmlns:th="http://www.thymeleaf.org">
+
+    <div class="row">
+        <div class="col-12 col-md-4 col-lg-4 col-xl-3">
+            <h1 class="table-heading">Current</h1>
+        </div>
+        <div class="col-12 col-md-7 col-lg-8 col-xl-6">
+            <input class="form-control" id="approvedFilter" type="text" name="keyword" placeholder="Filter Positions..." /></div>
+        <div class="col-md-1 col-xl-3"></div>
+    </div>
+
+    <div class="row table-container">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Type</th>
+                <th>Provider</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Description</th>
+                <th class="text-center">View Job & Placement Details</th>
+            </tr>
+            </thead>
+            <tbody id="approvedPositionsData">
+            <tr th:each="pos : ${approvedPositions}">
+                <th scope="row" th:text="${pos.id}"></th>
+                <td th:text="${pos.type}">Job</td>
+                <td th:text="${pos.partner.businessName}">Microsoft</td>
+                <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
+                <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
+                <td th:text="${pos.description}">Just a one month job</td>
+                <button class="btn btn-outline-secondary" id="sidebarToggle">Menu</button>
+                <td style="display: flex;">
+                    <div class="mx-auto">
+                        <span th:if="${pos.type == 'Placement'}" class='btn btn-primary'>View Placement</span>
+                        <span th:if="${pos.type == 'Job'}" class='btn btn-primary'>View Job</span>
+                    </div>
+                </td>
+            </tr>
             </tbody>
         </table>
 
