--- a/web/src/main/resources/templates/partner/new-position.html
+++ b/web/src/main/resources/templates/partner/new-position.html
@@ -16,7 +16,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-                    <li class="breadcrumb-item"><a th:href="@{/marketplace}">Marketplace</a></li>
+                    <li class="breadcrumb-item"><a th:href="@{/partner/marketplace}">Marketplace</a></li>
                     <li class="breadcrumb-item active" aria-current="page">New Position</li>
                 </ol>
             </nav>
