Setup partner expression of interest page

--- a/web/src/main/resources/templates/partner/marketplace.html
+++ b/web/src/main/resources/templates/partner/marketplace.html
@@ -31,6 +31,8 @@
         <a class="btn btn-primary" th:href="@{~/partner/expressions-of-interest}">View Expressions Of Interest</a>
       </div>
 
+      <div th:replace="fragments/marketplace-tables :: partner-expression-of-interest"></div>
+
     </div>
   </div>
 </div>
