--- a/web/src/main/resources/templates/fragments/marketplace-tables.html
+++ b/web/src/main/resources/templates/fragments/marketplace-tables.html
@@ -175,3 +175,60 @@
     </div>
 
 </div>
+
+<!-- Partner Jobs & Placements -->
+<div th:fragment="partner-expression-of-interest" id="partner-expression-of-interest" xmlns:th="http://www.thymeleaf.org">
+
+    <div class="row">
+        <div class="col-12 col-md-4 col-lg-4 col-xl-3">
+            <h1 class="table-heading">Pending Expressions of Interest</h1>
+        </div>
+        <div class="col-12 col-md-7 col-lg-8 col-xl-6">
+            <input class="form-control" id="partnerFilter" type="text" name="keyword" placeholder="Filter Positions..." /></div>
+        <div class="col-md-1 col-xl-3"></div>
+    </div>
+
+    <div class="row table-container">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Type</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Description</th>
+                <th>Status</th>
+                <th class="text-center">Manage</th>
+            </tr>
+            </thead>
+            <tbody id="partnerPositionsData">
+            <tr th:each="pos : ${partnerPositions}">
+                <th scope="row" th:text="${pos.id}"></th>
+                <td th:text="${pos.type}">Job</td>
+                <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
+                <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
+                <td th:text="${pos.description}">Just a one month job</td>
+                <td th:text="${pos.approved ? 'Approved' : 'Pending'}">Approved</td>
+                <td style="display: flex;">
+                    <div class="mx-auto">
+                        <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
+                        <span class="material-symbols-rounded btn-delete">delete</span>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <script th:inline="javascript">
+            /*<![CDATA[*/
+            var positions =
+                /*[[${partnerPositions}]]*/
+                /*]]>*/
+                $("#partnerFilter").on("keyup", function () {
+                    var value = $(this).val();
+                    var table = document.getElementById("partnerPositionsData");
+                    var filteredData = partnerFilterPositions(value, positions);
+                    rebuildPartnerPositionsTable(filteredData, table);
+                });
+        </script>
+    </div>
