--- a/web/src/main/resources/templates/partner/dashboard.html
+++ b/web/src/main/resources/templates/partner/dashboard.html
@@ -41,6 +41,16 @@
           </div>
         </div>
         <div class="card col-sm-12 col-md-4" style="width: 18rem;">
+          <img class="card-img-top" height="180px" width="auto" src="" th:src="@{~/assets/EOI.jpg}"
+               alt="Expressions of Interest">
+          <div class="card-body">
+            <h5 class="card-title">Expressions of Interest</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Manage</h6>
+            <p class="card-text">Receive and release placement expressions of interest</p>
+            <a th:href="@{expressions-of-interest}" class="btn btn-primary">Browse</a>
+          </div>
+        </div>
+        <div class="card col-sm-12 col-md-4" style="width: 18rem;">
           <img class="card-img-top" height="180px" width="auto" src="" th:src="@{~/assets/profile.jpg}"
                alt="Profile">
           <div class="card-body">
