--- a/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
+++ b/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
@@ -1,5 +1,5 @@
 
-<!-- Jobs & Placements that are still pending approval -->
+<!-- Expressions of Interest that are still pending approval (Educator) -->
 <div th:fragment="pending-approval" id="pending-approval" xmlns:th="http://www.thymeleaf.org">
     
     <div class="row">
@@ -13,8 +13,6 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Position Type</th>
-                    <th>Discipline</th>
                     <th>Provider</th>
                     <th>Start Date</th>
                     <th>End Date</th>
@@ -25,8 +23,6 @@
             <tbody id="pendingPositionsData">
                 <tr th:each="pos : ${pendingPositions}">
                     <th scope="row" th:text="${pos.id}"></th>
-                    <td th:text="${pos.positionType}">Job</td>
-                    <td th:text="${pos.categoryName}">Network</td>
                     <td th:text="${pos.partner.businessName}">Microsoft</td>
                     <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
                     <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
@@ -60,7 +56,7 @@
 </div>
 
 
-<!-- Current (approved) Jobs & Placements -->
+<!-- Current (approved) Expressions of Interest (Educator) -->
 <div th:fragment="approved" id="approved" xmlns:th="http://www.thymeleaf.org">
 
     <div class="row">
@@ -77,8 +73,6 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Position Type</th>
-                    <th>Discipline</th>
                     <th>Provider</th>
                     <th>Start Date</th>
                     <th>End Date</th>
@@ -89,8 +83,6 @@
             <tbody id="approvedPositionsData">
                 <tr th:each="pos : ${approvedPositions}">
                     <th scope="row" th:text="${pos.id}"></th>
-                    <td th:text="${pos.positionType}">Job</td>
-                    <td th:text="${pos.categoryName}">Software Development</td>
                     <td th:text="${pos.partner.businessName}">Microsoft</td>
                     <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
                     <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
@@ -121,7 +113,7 @@
 
 </div>
 
-<!-- Partner Jobs & Placements -->
+<!-- Partner Expressions of Interest -->
 <div th:fragment="partner" id="partner" xmlns:th="http://www.thymeleaf.org">
 
     <div class="row">
@@ -149,7 +141,6 @@
             <tbody id="partnerPositionsData">
             <tr th:each="pos : ${partnerPositions}">
                 <th scope="row" th:text="${pos.id}"></th>
-                <td th:text="${pos.type}">Job</td>
                 <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
                 <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
                 <td th:text="${pos.description}">Just a one month job</td>
